# Art_of_Multiprocessor_Programming_rust

chapter_1/: chapter_1.md
chapter_1/exercises/: Cargo.toml
chapter_1/exercises/src/: lib.rs  question1.rs  question4.rs
chapter_2/exercises/: Cargo.toml
chapter_2/theory/: Cargo.toml
chapter_2/theory/src/: lib.rs  lock_1.rs  lock_2.rs  lock_peterson.rs
