[package]
name = "exercises"
version = "0.1.0"
authors = ["louis"]
edition = "2018"

[[bin]]
name = "question1"
path = "src/question1.rs"

[[bin]]
name = "question4"
path = "src/question4.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"